Refresh Token Api Done and merged

--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -145,7 +145,7 @@
                         android:layout_height="wrap_content"
                         android:paddingVertical="5dp"
                         android:id="@+id/addressLine1"
-                        android:background="@drawable/edit_text_bg_2"
+                        android:background="@drawable/edittext_bg"
                         android:hint="1313 Disneyland Dr,"
                         android:paddingLeft="13dp"
                         android:textColor="@color/black"
@@ -179,7 +179,7 @@
                         android:layout_height="wrap_content"
                         android:paddingVertical="5dp"
                         android:id="@+id/addressLine2"
-                        android:background="@drawable/edit_text_bg_2"
+                        android:background="@drawable/edittext_bg"
                         android:hint="5th Avenue"
                         android:paddingLeft="13dp"
                         android:textColor="@color/black"
@@ -202,7 +202,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
                         android:id="@+id/city"
-                        android:background="@drawable/edit_text_bg_2"
+                        android:background="@drawable/edittext_bg"
                         android:hint="Anaheim"
                         android:paddingLeft="13dp"
                         android:singleLine="true"
@@ -237,7 +237,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
                         android:id="@+id/state"
-                        android:background="@drawable/edit_text_bg_2"
+                        android:background="@drawable/edittext_bg"
                         android:hint="California"
                         android:paddingLeft="13dp"
                         android:singleLine="true"
@@ -283,7 +283,7 @@
                             android:layout_height="28dp"
                             android:layout_weight="1"
                             android:background="@null"
-                            android:text="Choose Country"
+                            android:hint="Select country"
                             android:layout_marginLeft="13dp"
                             android:gravity="center|left"
                             android:singleLine="true"
@@ -373,7 +373,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
                         android:id="@+id/pinCode"
-                        android:background="@drawable/edit_text_bg_2"
+                        android:background="@drawable/edittext_bg"
                         android:hint="92802"
                         android:inputType="number"
                         android:paddingLeft="13dp"
