--- a/app/src/main/res/layout/dropdown_text_layout.xml
+++ b/app/src/main/res/layout/dropdown_text_layout.xml
@@ -2,7 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:text="Title"
 
-    android:paddingLeft="10dp"
+    android:gravity="center"
+    android:textColor="@color/black"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:textSize="12sp"
