--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -48,8 +48,8 @@
 
                 <ImageView
                     android:id="@+id/ordersImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_orders___selected" />
 
@@ -58,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:text="Orders"
                     android:textColor="@color/black"
+                    android:layout_marginTop="3dp"
                     android:textFontWeight="500"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -83,8 +84,8 @@
 
                 <ImageView
                     android:id="@+id/lockerImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_locker" />
 
@@ -94,6 +95,7 @@
                     android:text="Locker"
                     android:textColor="@color/black"
                     android:textFontWeight="500"
+                    android:layout_marginTop="3dp"
                     android:textSize="12sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -118,8 +120,8 @@
 
                 <ImageView
                     android:id="@+id/shipmentImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_shipments" />
 
@@ -127,6 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Shipments"
+                    android:layout_marginTop="3dp"
                     android:textColor="@color/black"
                     android:textFontWeight="500"
                     android:textSize="12sp" />
@@ -153,8 +156,8 @@
 
                 <ImageView
                     android:id="@+id/accountImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_account" />
 
@@ -163,6 +166,7 @@
                     android:layout_height="wrap_content"
                     android:text="Account"
                     android:textColor="@color/black"
+                    android:layout_marginTop="3dp"
                     android:textFontWeight="500"
                     android:textSize="12sp" />
             </LinearLayout>
