--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -247,6 +247,7 @@
 
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/shippingCalculator"
                             android:layout_width="240dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="18dp"
