--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -86,7 +86,7 @@
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/my_cash"
+                            android:src="@mipmap/refferal_reward"
                             android:contentDescription="TODO" />
 
                         <TextView
@@ -166,7 +166,7 @@
                                 android:inputType="none"
                                 android:padding="0dp"
 
-                                android:paddingStart="38dp"
+                                android:paddingStart="30dp"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/black"
                                 android:textFontWeight="600"
