--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -112,7 +112,9 @@
                     android:layout_marginTop="28dp"
                     android:layout_marginHorizontal="22dp"
                     app:cardCornerRadius="10dp"
-                    app:cardElevation="4dp">
+                    app:cardElevation="4dp"
+                    android:id="@+id/verifyEmailBox"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -160,7 +162,8 @@
                             android:textSize="10sp"
                             app:backgroundTint="#17B28F"
                             android:textColor="@color/white"
-                            app:cornerRadius="5dp" />
+                            app:cornerRadius="5dp"
+                            android:id="@+id/verifyEmailBtn"/>
 
                     </LinearLayout>
 
