--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="onboarding_header">#1B274E</color>
     <color name="skipcolor">#3A5FD8</color>
     <color name="button_color">#17B28F</color>
+    <color name="selected_btn_color">#2D8DFF</color>
+    <color name="unselected_btn_color">#F8F8F8</color>
 </resources>
