--- a/app/src/main/res/layout/fragment_vertual_address.xml
+++ b/app/src/main/res/layout/fragment_vertual_address.xml
@@ -38,7 +38,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="23dp"
                         android:layout_marginTop="28dp"
-                        android:text="Billing Address"
+                        android:text="Virtual Address"
                         android:textColor="@color/black"
                         android:textFontWeight="700"
                         android:textSize="14sp" />
