--- a/app/src/main/res/layout/fragment_empty_address_book.xml
+++ b/app/src/main/res/layout/fragment_empty_address_book.xml
@@ -154,20 +154,22 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="23dp"
                                 android:layout_marginTop="28dp"
+                                android:layout_marginBottom="18dp"
+                                android:layout_marginLeft="23dp"
+                                android:layout_weight="1"
                                 android:text="Delivery Address"
                                 android:textColor="@color/black"
                                 android:textFontWeight="700"
                                 android:textSize="14sp" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="25dp"
-                                android:layout_marginRight="23dp"
-                                android:gravity="right"
-                                android:orientation="vertical">
+<!--                            <LinearLayout-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_marginTop="25dp"-->
+<!--                                android:layout_marginRight="23dp"-->
+<!--                                android:gravity="right"-->
+<!--                                android:orientation="vertical">-->
 
                                 <com.google.android.material.textfield.TextInputLayout
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -175,7 +177,9 @@
                                     android:layout_height="wrap_content"
                                     android:background="@drawable/all_address_bg"
                                     app:boxStrokeWidth="0dp"
-                                    android:layout_marginLeft="30dp"
+                                    android:layout_marginTop="25dp"
+                                    android:layout_weight="1"
+                                    android:layout_marginRight="23dp"
                                     app:boxStrokeWidthFocused="0dp"
                                     app:endIconTint="@color/hint_color"
                                     app:hintAnimationEnabled="false"
@@ -195,7 +199,7 @@
                                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                            </LinearLayout>
+<!--                            </LinearLayout>-->
 
 
                         </LinearLayout>
