--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -7,7 +7,7 @@
     android:background="@color/box_background_color"
     tools:context=".UI.Orders.OrderFragments.OrderFragment">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -37,7 +37,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:paddingTop="5dp">
+                        android:paddingTop="5dp"
+                        android:layout_marginBottom="5dp">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -352,16 +353,17 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/orderListing"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginTop="20dp">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-
+                    android:layout_marginTop="20dp"
                     >
 
 
@@ -634,6 +636,6 @@
             </LinearLayout>
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
