--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -19,8 +19,8 @@
         android:id="@+id/orderFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="60dp"
-        android:layout_below="@id/toolBar"/>
+        android:layout_below="@id/toolBar"
+        android:layout_marginBottom="60dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,7 @@
             android:clickable="true"
             android:id="@+id/orderCard"
             android:layout_width="98dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             app:cardCornerRadius="0dp"
             app:cardElevation="0dp"
