--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -28,6 +28,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp">
 
@@ -367,12 +369,13 @@
 
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/virtualAddressCard"
                         android:layout_width="114dp"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="5dp"
                         android:layout_marginLeft="20dp"
                         android:layout_weight="1"
-                        app:cardCornerRadius="5dp"
+                        app:cardCornerRadius="10dp"
                         app:cardElevation="4dp">
 
                         <LinearLayout
@@ -408,12 +411,13 @@
 
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/shippingCalculatorCard"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="5dp"
                         android:layout_marginLeft="14dp"
                         android:layout_weight="1"
-                        app:cardCornerRadius="5dp"
+                        app:cardCornerRadius="10dp"
                         app:cardElevation="4dp">
 
                         <LinearLayout
@@ -454,7 +458,7 @@
                         android:layout_marginLeft="14dp"
                         android:layout_marginRight="20dp"
                         android:layout_weight="1"
-                        app:cardCornerRadius="5dp"
+                        app:cardCornerRadius="10dp"
                         app:cardElevation="4dp">
 
                         <LinearLayout
@@ -499,7 +503,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp">
+                        android:padding="26dp">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -578,6 +582,7 @@
                                 android:gravity="right">
 
                                 <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/addNewOrderBtn"
                                     android:layout_width="152dp"
                                     android:layout_height="24dp"
                                     android:layout_marginTop="19dp"
