--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -284,7 +284,7 @@
                             android:layout_weight="1"
                             android:background="@null"
                             android:hint="Select country"
-                            android:layout_marginLeft="13dp"
+                            android:paddingLeft="15dp"
                             android:gravity="center|left"
                             android:singleLine="true"
                             android:inputType="textPersonName"
