--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -29,7 +29,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
                     app:cardCornerRadius="10dp"
-                    app:cardElevation="4dp">
+                    app:cardElevation="4dp"
+                    android:id="@+id/sevenDay">
 
 
 
