--- a/app/src/main/res/layout/single_order_layout.xml
+++ b/app/src/main/res/layout/single_order_layout.xml
@@ -9,12 +9,13 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="38dp"
         android:layout_height="38dp"
+        android:layout_gravity="center_vertical"
         android:src="@drawable/ic_personal_shopper"
         android:id="@+id/singleOrderImage"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:layout_marginLeft="12dp">
 
@@ -42,6 +43,7 @@
         android:text="15 Dec 2020"
         android:layout_gravity="center_vertical"
         android:textSize="10sp"
+        android:layout_weight="2"
         android:textColor="@color/black"
         android:layout_marginLeft="5dp"
         />
@@ -50,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+
         android:id="@+id/viewMore">
         <TextView
 
