--- a/app/src/main/res/layout/fragment_order_summary.xml
+++ b/app/src/main/res/layout/fragment_order_summary.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Orders.OrderFragments.OrderSummaryFragment">
 
     <LinearLayout
@@ -11,127 +11,51 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="24dp">
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            app:cardElevation="4dp">
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="24dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:text="Additional Options"
+                    android:textColor="@color/black"
                     android:textFontWeight="700"
-                    android:textSize="14sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="25dp"
-                    android:textSize="12sp"
-                    android:textFontWeight="600"
-                    android:textColor="@color/black"
-                    android:text="Myntra"
-                    android:id="@+id/websiteName"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Additional Charges"
-                    android:textFontWeight="500"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"/>
-
-                <EditText
+                    android:textSize="14sp"
+                    android:layout_marginBottom="20dp"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycle"
                     android:layout_width="match_parent"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="7dp"
-                    android:background="@drawable/edittext_bg"
-                    android:textColor="@color/black"
-                    android:hint="Tax or Delivery Charges"
-                    android:textSize="10sp"
-                    android:paddingLeft="15dp"
-                    android:id="@+id/charges"/>
+                    android:layout_height="wrap_content" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Additional Instructions"
-                    android:textFontWeight="500"
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="match_parent"
+                    android:layout_height="37dp"
+                    android:layout_marginHorizontal="80dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/button_blue"
+                    android:text="Proceed"
+                    android:textAllCaps="false"
+                    android:letterSpacing="0.03"
+                    android:layout_weight="700"
                     android:textSize="12sp"
-                    android:layout_marginTop="12dp"
-                    android:textColor="@color/black"/>
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="7dp"
-                    android:background="@drawable/edittext_bg"
-                    android:textColor="@color/black"
-                    android:hint="Enter text here"
-                    android:textSize="10sp"
-                    android:paddingLeft="15dp"
-                    android:id="@+id/instruction"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Continue buying, even if the cost of items go up by"
-                    android:textFontWeight="500"
-                    android:textSize="12sp"
-                    android:layout_marginTop="12dp"
-                    android:textColor="@color/black"/>
-                <LinearLayout
-                    android:layout_marginTop="7dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:background="@drawable/edit_text_bg">
+                    android:textColor="@color/white"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"/>
 
-
-                    <TextView
-                        android:id="@+id/dropdown"
-                        android:layout_width="match_parent"
-                        android:layout_height="28dp"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:hint="Select an option"
-                        android:paddingLeft="15dp"
-                        android:gravity="center|left"
-                        android:singleLine="true"
-                        android:inputType="textPersonName"
-                        android:textColor="@color/hint_color"
-                        android:textColorHint="@color/hint_color"
-                        android:textSize="12sp"
-                        app:boxStrokeColor="@color/hint_color" />
-
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/hint_color"/>
-
-
-                    <ImageView
-                        android:id="@+id/triangleDropdown"
-                        android:layout_width="12dp"
-                        android:layout_height="12dp"
-                        android:layout_gravity="center"
-                        android:layout_marginHorizontal="8dp"
-                        android:src="@drawable/triangle" />
-
-
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/background"
-                    android:layout_marginVertical="28dp"/>
             </LinearLayout>
+
         </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 
 
