--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".UI.Orders.OrderFragments.TabLayoutFragments.EmptyCart">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/itemInCartCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="22dp"
@@ -45,7 +46,7 @@
                     android:layout_width="38dp"
                     android:layout_height="38dp"
                     android:layout_marginRight="11dp"
-                    android:src="@drawable/cart"/>
+                    android:src="@drawable/cart_ic"/>
 
                 <ImageView
                     android:layout_width="14dp"
@@ -56,6 +57,138 @@
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/productCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="22dp"
+            android:layout_marginTop="-40dp"
+            android:layout_marginBottom="28dp"
+            app:cardCornerRadius="10dp"
+            android:visibility="gone"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/cartRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="39dp"
+                android:layout_marginTop="64dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="17dp"
+                    android:background="#8F8F8F"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="46dp"
+                    android:layout_marginHorizontal="44dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Order Total"
+                    android:textSize="12sp"
+                    android:textColor="@color/black"
+                    android:layout_weight="1"
+                    android:textFontWeight="600"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="₹ 5174.00"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:textFontWeight="600"/>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="11dp"
+                    android:layout_marginHorizontal="44dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Personal Shopper Fees"
+                        android:textSize="12sp"
+                        android:textColor="@color/black"
+                        android:layout_weight="1"
+                        android:textFontWeight="600"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="₹ 400.00"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:textFontWeight="600"/>
+
+
+                </LinearLayout>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="17dp"
+                    android:background="#8F8F8F"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginBottom="29dp"
+                    android:layout_marginHorizontal="44dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_weight="1"
+                        android:textFontWeight="700"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="₹ 5536.18"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textFontWeight="700"/>
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
+
+        </androidx.cardview.widget.CardView>
+
 
 
         <androidx.cardview.widget.CardView
@@ -230,21 +363,35 @@
                         android:textFontWeight="500"
                         android:textSize="10sp" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edittext_bg"
+                        android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="13dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/rupes" />
+
 
                     <EditText
-                        android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingVertical="5dp"
-                        android:background="@drawable/edittext_bg"
                         android:hint="749.00"
-                        android:drawableStart="@drawable/rupes"
+                        android:layout_gravity="center"
+                        android:background="@null"
                         android:singleLine="true"
-                        android:paddingLeft="13dp"
+                        android:paddingLeft="6dp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
                         app:boxStrokeColor="@color/hint_color" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -414,5 +561,5 @@
 
 
     </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </FrameLayout>
