--- a/app/src/main/res/layout/fragment_self_shopper_place_order_fargment.xml
+++ b/app/src/main/res/layout/fragment_self_shopper_place_order_fargment.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingVertical="26dp"
-        android:paddingHorizontal="22dp">
+        >
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="4dp"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="10dp"
+            android:layout_marginVertical="25dp"
+            android:layout_marginHorizontal="22dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,15 +163,32 @@
                     android:paddingStart="15dp"
                     android:inputType="text"/>
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/clickableLayout">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="168dp"
+                        android:src="@drawable/referral_invite"
+
+                        android:id="@+id/img"
+                        android:visibility="gone"/>
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="168dp"
-                    android:layout_marginTop="16dp"
-                    android:backgroundTint="@color/background">
+
+                    android:backgroundTint="@color/background"
+                    android:id="@+id/layout">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        >
                         <View
                             android:layout_marginTop="13dp"
                             android:layout_marginHorizontal="16dp"
@@ -227,7 +245,7 @@
                     </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
-
+                </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -252,7 +270,8 @@ Please note that you will have to upload a tax invoice on order dispatch."
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:textAllCaps="false"
-                    android:textFontWeight="700"/>
+                    android:textFontWeight="700"
+                    android:id="@+id/proceed"/>
             </LinearLayout>
 
 
