--- a/app/src/main/res/layout/fragment_order_summary.xml
+++ b/app/src/main/res/layout/fragment_order_summary.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            app:cardElevation="0dp">
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,12 +38,14 @@
                     android:layout_height="wrap_content" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/orderSummaryProceedBtn"
                     android:layout_width="match_parent"
                     android:layout_height="37dp"
                     android:layout_marginHorizontal="80dp"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="@color/button_blue"
                     android:text="Proceed"
+                    app:cornerRadius="5dp"
                     android:textAllCaps="false"
                     android:letterSpacing="0.03"
                     android:layout_weight="700"
