--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".UI.Orders.OrderFragments.RegularViewOrder">
+    tools:context=".UI.Orders.OrderFragments.ViewOrderPersonalShop">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:layout_height="39dp"
                 android:layout_marginLeft="18dp"
                 android:layout_marginVertical="31dp"
-                android:src="@drawable/ic_self_shopper" />
+                android:src="@drawable/ic_personal_shopper" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Myntra"
+                    android:text="Amazon"
                     android:textSize="14sp"
                     android:textFontWeight="700"
                     android:textColor="@color/black"/>
@@ -139,7 +139,7 @@
         app:cardElevation="4dp">
 
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_layout"
+            android:id="@+id/viewOrderTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabTextColor="@color/black"
